<resources>
    <string name="app_name">My Fit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in_title">Sign in to MyFit</string>

    <string name="header_ble_list">Choose your device</string>
    <string name="menu_home">Home</string>
    <string name="menu_calories">Daily Calories</string>
    <string name="menu_workout">Daily Workout</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_logout">Sign out</string>
    <string name="menu_calories_list">Calories List</string>
    <string name="menu_family">Family</string>
    <string name="menu_profile">Manage Profile</string>
    <string name="menu_fit_statistics">Fitness Statistics</string>
    <string name="menu_bmi_statistics">BMI Statistics</string>
    <string name="title_add_new_activity">Add new activity</string>
    <string name="title_add_new_food">Add new dish</string>
    <string name="title_qr_scanner">Scan QR Code</string>
    <string name="title_qr_provider">New QR Code</string>

    <string name="login_registration">Create a new account</string>

    <string name="calories_title">Total Daily Calories:</string>
    <string name="calories_breakfast">Breakfast</string>
    <string name="calories_lunch">Lunch</string>
    <string name="calories_dinner">Dinner</string>

    <string name="calories_tab_a">All</string>
    <string name="calories_tab_b">Breakfast</string>
    <string name="calories_tab_c">Lunch</string>
    <string name="calories_tab_d">Dinner</string>

    <string name="new_activity_type">Activity Type</string>
    <string name="new_activity_date">Date</string>
    <string name="new_activity_duration">Duration</string>

    <string name="new_food_image">Image</string>
    <string name="new_food_type">Dish</string>
    <string name="new_food_date">Date</string>
    <string name="new_food_calorie">Calorie</string>

    <string name="workout_overview_time">Total time</string>
    <string name="workout_overview_exercises">Number of exercises</string>

    <string name="calorie_overview_total">Total calorie</string>
    <string name="calorie_overview_average">Daily food average</string>

    <string name="statistics_steps">Steps done</string>
    <string name="statistics_meters">Meters</string>
    <string name="statistics_distances">Distances travelled</string>
    <string name="statistics_calories">Calories burned</string>
    <string name="statistics_heart_rates">Heart Rates</string>

    <string name="new_family_add_new">Add a new member to your family</string>
    <string name="new_family_be_part">Be part of a family</string>

    <string name="url_server">http://ec2-18-130-176-120.eu-west-2.compute.amazonaws.com</string>
    <!-- <string name="url_server">http://192.168.1.47:3000</string> -->
    <string name="tag">MYFIT</string>
    <string name="preference_file_name">myfitpreferences</string>
</resources>
