<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calorie"
            android:icon="@drawable/ic_food"
            android:title="@string/menu_calories" />
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/ic_workout"
            android:title="@string/menu_workout" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_family"
            android:icon="@drawable/ic_family"
            android:title="@string/menu_family" />
    </group>

    <group
        android:id="@+id/menu_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/menu_logout" />
    </group>
</menu>
