<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@id/nav_calorie"
        android:name="com.example.luigidarco.myfit.fragments.CalorieFragment"
        android:label="@string/menu_calories"
        tools:layout="@layout/fragment_calorie" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.luigidarco.myfit.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/nav_workout"
        android:name="com.example.luigidarco.myfit.fragments.WorkoutFragment"
        android:label="@string/menu_workout"
        tools:layout="@layout/fragment_workout" />
</navigation>