<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dialog_element_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_food_image"
                android:textColor="@color/colorTertiary"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/add_food_image"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_element_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingTop="@dimen/layout_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_food_type"
                android:textColor="@color/colorTertiary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/add_food_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_element_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingTop="@dimen/layout_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_food_date"
                android:textColor="@color/colorTertiary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/add_food_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_element_calorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingTop="@dimen/layout_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_food_calorie"
                android:textColor="@color/colorTertiary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/add_food_calorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_activity_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        android:padding="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_padding"
        android:layout_alignParentBottom="true" />

</RelativeLayout>