<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="@dimen/layout_padding"
            app:cardCornerRadius="@dimen/layout_padding"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding"
                    android:text="@string/statistics_steps"
                    android:textColor="@color/colorTertiary"
                    android:textSize="20dp" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/family_member_steps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="@dimen/layout_padding"
            android:layout_marginRight="@dimen/layout_padding"
            android:layout_marginBottom="@dimen/layout_padding"
            app:cardCornerRadius="@dimen/layout_padding"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding"
                    android:text="@string/statistics_meters"
                    android:textColor="@color/colorTertiary"
                    android:textSize="20dp" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/family_member_meters"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="@dimen/layout_padding"
            android:layout_marginRight="@dimen/layout_padding"
            android:layout_marginBottom="@dimen/layout_padding"
            app:cardCornerRadius="@dimen/layout_padding"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding"
                    android:text="@string/statistics_calories"
                    android:textColor="@color/colorTertiary"
                    android:textSize="20dp" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/family_member_calories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="@dimen/layout_padding"
            android:layout_marginRight="@dimen/layout_padding"
            android:layout_marginBottom="@dimen/layout_padding"
            app:cardCornerRadius="@dimen/layout_padding"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding"
                    android:text="@string/statistics_heart_rates"
                    android:textColor="@color/colorTertiary"
                    android:textSize="20dp" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/family_member_rates"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>